--- a/Pointer/Pointer.vcxproj.filters
+++ b/Pointer/Pointer.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="Pointer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileName.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="friendclass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
