--- a/Pointer/Pointer.vcxproj.filters
+++ b/Pointer/Pointer.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="friendclass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="friendfunction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
