--- a/Pointer/Pointer.vcxproj.filters
+++ b/Pointer/Pointer.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="friendfunction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="friendfunctionkedua.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
