--- a/Pointer/Pointer.vcxproj
+++ b/Pointer/Pointer.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="FileName.cpp" />
     <ClCompile Include="friendclass.cpp" />
     <ClCompile Include="friendfunction.cpp" />
+    <ClCompile Include="friendfunctionkedua.cpp" />
     <ClCompile Include="Pointer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
